# django-stubs

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE.txt  Pipfile  README.md  conftest.py  dev-requirements.txt  django-stubs  flake8-pyi.ini  justfile  mfile.py  mfile.py.gv  my.gv  mypy-test.ini  mypy.ini  mypy.ini.dev  package.json  psycopg2-stubs  pyproject.toml  pyrefly.toml  pyrightconfig.json  pyrightconfig.testcases.json  pytest.ini  reformat.xsh  release.sh  release.xsh  reproduce_issue.py  requirements-base.txt  requirements.txt  setup.cfg  (+3 more)
.circleci/: config.yml
.github/: AI_POLICY.md  FUNDING.yml  dependabot.yml  pull_request_template.md  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: mypy_primer.yml  mypy_primer_comment.yml  pre-commit-autoupdate.yml  release-django-stubs-ext.yml  release-django-stubs.yml  release.yml  test.yml
django/: shortcuts.pyi
django-stubs/: __init__.pyi  shortcuts.pyi
django-stubs-generated/: __init__.pyi  shortcuts.pyi
django-stubs-generated/apps/: config.pyi  registry.pyi
django-stubs-generated/conf/: __init__.pyi
django-stubs-generated/core/: exceptions.pyi  paginator.pyi  signing.pyi  validators.pyi  wsgi.pyi
django-stubs-generated/db/: __init__.pyi  transaction.pyi  utils.pyi
django-stubs-generated/dispatch/: __init__.pyi  dispatcher.pyi
django-stubs-generated/forms/: boundfield.pyi  fields.pyi  forms.pyi  formsets.pyi  models.pyi  renderers.pyi  utils.pyi  widgets.pyi
django-stubs-generated/http/: __init__.pyi  multipartparser.pyi  request.pyi  response.pyi
django-stubs-generated/middleware/: cache.pyi  clickjacking.pyi  common.pyi  gzip.pyi  http.pyi  locale.pyi  security.pyi
django-stubs-generated/template/: base.pyi  context.pyi  defaultfilters.pyi  defaulttags.pyi  engine.pyi  library.pyi  loader.pyi  smartif.pyi  utils.pyi
django-stubs-generated/templatetags/: cache.pyi  static.pyi  tz.pyi
django-stubs-generated/test/: __init__.pyi  client.pyi  html.pyi  runner.pyi  selenium.pyi  signals.pyi  testcases.pyi  utils.pyi
django-stubs-generated/urls/: base.pyi  conf.pyi  converters.pyi  exceptions.pyi  resolvers.pyi  utils.pyi
django-stubs-generated/utils/: autoreload.pyi  baseconv.pyi  cache.pyi  crypto.pyi  datastructures.pyi  decorators.pyi  deprecation.pyi  duration.pyi  feedgenerator.pyi  formats.pyi  functional.pyi  html.pyi  inspect.pyi  ipv6.pyi  itercompat.pyi  log.pyi  module_loading.pyi  safestring.pyi  six.pyi  text.pyi  timesince.pyi  timezone.pyi  tree.pyi  version.pyi  xmlutils.pyi
django-stubs-generated/views/: csrf.pyi  debug.pyi  defaults.pyi  static.pyi
django-stubs/apps/: __init__.pyi  config.pyi  registry.pyi
django-stubs/conf/: __init__.pyi  global_settings.pyi
django-stubs/core/: asgi.pyi  exceptions.pyi  paginator.pyi  signing.pyi  validators.pyi  wsgi.pyi
django-stubs/db/: __init__.pyi  transaction.pyi  utils.pyi
django-stubs/dispatch/: __init__.pyi  dispatcher.pyi
django-stubs/forms/: __init__.pyi  boundfield.pyi  fields.pyi  forms.pyi  formsets.pyi  models.pyi  renderers.pyi  utils.pyi  widgets.pyi
django-stubs/http/: __init__.pyi  cookie.pyi  multipartparser.pyi  request.pyi  response.pyi
django-stubs/middleware/: cache.pyi  clickjacking.pyi  common.pyi  csp.pyi  csrf.pyi  gzip.pyi  http.pyi  locale.pyi  security.pyi
django-stubs/tasks/: __init__.pyi  base.pyi  signals.pyi
django-stubs/template/: __init__.pyi  autoreload.pyi  base.pyi  context.pyi  context_processors.pyi  defaultfilters.pyi  defaulttags.pyi  engine.pyi  exceptions.pyi  library.pyi  loader.pyi  loader_tags.pyi  response.pyi  smartif.pyi  utils.pyi
django-stubs/templatetags/: cache.pyi  i18n.pyi  l10n.pyi  static.pyi  tz.pyi
django-stubs/test/: __init__.pyi  client.pyi  html.pyi  runner.pyi  selenium.pyi  signals.pyi  testcases.pyi  utils.pyi
django-stubs/urls/: __init__.pyi  base.pyi  conf.pyi  converters.pyi  resolvers.pyi  utils.pyi
django-stubs/utils/: _os.pyi  archive.pyi  asyncio.pyi  autoreload.pyi  baseconv.pyi  cache.pyi  choices.pyi  connection.pyi  crypto.pyi  csp.pyi  datastructures.pyi  dateformat.pyi  dateparse.pyi  datetime_safe.pyi  deconstruct.pyi  decorators.pyi  deprecation.pyi  duration.pyi  encoding.pyi  feedgenerator.pyi  formats.pyi  (+23 more)
django_stubs/: __init__.py
django_stubs_ext/: README.md  dev-requirements.txt  mypy.ini  pytest.ini  requirements.txt  setup.cfg  setup.py
ext/: README.md  pyproject.toml  release.sh  setup.py
ext/django_stubs_ext/: __init__.py  aliases.py  annotations.py  compat.py  patch.py  settings.py  types.py
ext/django_stubs_ext/db/: models.py  router.py
ext/django_stubs_ext/db/models/: __init__.py  manager.py
ext/tests/: test_aliases.py  test_monkeypatching.py
ext/tests/typecheck/: test_aliases.yml
mypy_django_plugin/: config.py  constants.py  errorcodes.py  exceptions.py  helpers.py  lookups.py  main.py  model_classes.py  monkeypatch.py  plugin.py
mypy_django_plugin_newsemanal/: context.py  main.py
psycopg2-stubs/: __init__.pyi  _psycopg.pyi  _range.pyi  extensions.pyi  extras.pyi  tz.pyi
pytest_plugin/: collect.py  setup.py
s/: build  lint
scripts/: .gitignore  build_import_all_test.py  catch_non_abstract_annotation.py  compare_errors.py  compare_to_master.sh  django_tests_settings.py  enabled_test_modules.py  git_helpers.py  merge_stubs_into_django.py  mypy.ini  paths.py  reapply_types.py  release.sh  remove_django_2_2_code.py  stub.pyi  stubgen-django.py  stubtest.sh  tests_extension_hook.py  typecheck-tests-requirements.txt  typecheck_django_tests.xsh  typecheck_tests.ini  typecheck_tests.py  write_errors_cache.py
test/: data.py  helpers.py  plugins.ini  pytest_plugin.py  testdjango.py  vistir.py
test-data/: plugins.ini
test-data-newsemanal/: plugins.ini
test-output/: round-table.gv
test-plugin/: test_error_handling.py
tests/: test_error_handling.py  test_generic_consistency.py  test_monkey_patching.py
typings/: django  psycopg2
(+1472 files in other folders)
