[isort]
skip =
    django-sources,
    django-stubs,
    test-data
include_trailing_comma = true
multi_line_output = 5
wrap_length = 120

[flake8]
exclude =
    django-sources,
    django-stubs,
    test-data
max_line_length = 120

[tool:pytest]
testpaths = ./test-data
addopts =
    --tb=native
    --mypy-ini-file=./test-data/plugins.ini
    -s
    -v

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
