[isort]
skip =
  django-sources
  django-stubs
  test-data
include_trailing_comma = true
multi_line_output = 5
wrap_length = 120
known_first_party = mypy_django_plugin

[flake8]
exclude =
  django-sources
  django-stubs
  test-data
max_line_length = 120
per-file-ignores =
  # E301: expected 1 blank line
  # E302: expected 2 blank lines
  # E305: expected 2 blank lines after class or function definition
  # E701: multiple statements on one line (colon)
  # E743: ambiguous function definition 'X'
  # F821: undefined name 'X'
  *.pyi: E301, E302, E305, E701, E743, F821

[metadata]
license_file = LICENSE.txt
