[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "django-stubs-ext"
# NB! For clarity, keep version major.minor.patch in sync with django-stubs.
# It's fine to skip django-stubs-ext releases, but when doing a release, update this to newest django-stubs version.
version = "5.2.0"
description = "Monkey-patching and extensions for django-stubs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
maintainers = [
  { name = "Marti Raudsepp", email = "marti@juffo.org" },
]
authors = [
  { name = "Simula Proxy" },
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
dependencies = [
  "django",
  "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/typeddjango/django-stubs"
Funding = "https://github.com/sponsors/typeddjango"
"Release notes" = "https://github.com/typeddjango/django-stubs/releases"

[tool.hatch.build]
packages = ["django_stubs_ext"]
